// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test render function 'RenderNavbarMenu' should return '<ProgressBar />' when called with empty array of items. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="progress-bar-box "
        data-testid="progress-bar-view"
      >
        <span
          class="progress-bar-loader"
          style="height: 20px; width: 20px; border-style: solid; border-width: 2px; border-color: #6367ef;"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="progress-bar-box "
      data-testid="progress-bar-view"
    >
      <span
        class="progress-bar-loader"
        style="height: 20px; width: 20px; border-style: solid; border-width: 2px; border-color: #6367ef;"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test render function 'RenderNavbarMenu' should return '<ProgressBar />' when called with items undefined. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="progress-bar-box "
        data-testid="progress-bar-view"
      >
        <span
          class="progress-bar-loader"
          style="height: 20px; width: 20px; border-style: solid; border-width: 2px; border-color: #6367ef;"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="progress-bar-box "
      data-testid="progress-bar-view"
    >
      <span
        class="progress-bar-loader"
        style="height: 20px; width: 20px; border-style: solid; border-width: 2px; border-color: #6367ef;"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test render function 'RenderNavbarMenu' should return rendered list when items are provided and user is anonymous. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bulma-navbar is-flex is-flex-wrap-wrap"
      >
        <div
          class="bulma-navbar-item pr-5 pl-0 py-0"
        >
          <a
            class="render-navbar-list-item"
            href="/en/showcase"
          >
            <span
              class="render-navbar-list-item-text "
            >
              Showcase
            </span>
          </a>
        </div>
        <div
          class="bulma-navbar-item pr-5 pl-0 py-0"
        >
          <a
            class="render-navbar-list-item"
            href="/en/articles"
          >
            <span
              class="render-navbar-list-item-text "
            >
              Tech Articles
            </span>
          </a>
        </div>
        <div
          class="bulma-navbar-item bulma-has-dropdown bulma-is-hoverable"
        >
          <a
            class="bulma-navbar-link is-transparent render-navbar-list-item-text "
          >
            My interests
          </a>
          <div
            class="bulma-navbar-dropdown bulma-is-boxed bulma-is-right"
          >
            <a
              class="bulma-navbar-item"
              href="/en/photography"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Photography
              </span>
            </a>
            <a
              class="bulma-navbar-item"
              href="/en/football"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Football
              </span>
            </a>
            <a
              class="bulma-navbar-item"
              href="/en/guitar"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Guitar
              </span>
            </a>
            <a
              class="bulma-navbar-item"
              href="/en/bicycle"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Bicycle
              </span>
            </a>
            <a
              class="bulma-navbar-item"
              href="/en/electronics"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Electronics
              </span>
            </a>
          </div>
        </div>
        <div
          class="bulma-navbar-item pr-5 pl-0 py-0"
        >
          <a
            class="render-navbar-list-item"
            href="/en/contact"
          >
            <span
              class="render-navbar-list-item-text "
            >
              Contact
            </span>
          </a>
        </div>
        <div
          class="bulma-navbar-item pr-5 pl-0 py-0"
        >
          <a
            class="render-navbar-list-item"
            href="/en/about"
          >
            <span
              class="render-navbar-list-item-text "
            >
              About
            </span>
          </a>
        </div>
        <div
          class="bulma-navbar-item pr-5 pl-0 py-0"
        >
          <a
            class="render-navbar-list-item"
            href="/en/account/signin"
          >
            <span
              class="render-navbar-list-item-text "
            >
              Sign in
            </span>
          </a>
        </div>
        <div
          class="bulma-navbar-item pr-5 pl-0 py-0"
        >
          <a
            class="render-navbar-list-item"
            href="/en/account/signup"
          >
            <span
              class="render-navbar-list-item-text "
            >
              Sign up
            </span>
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bulma-navbar is-flex is-flex-wrap-wrap"
    >
      <div
        class="bulma-navbar-item pr-5 pl-0 py-0"
      >
        <a
          class="render-navbar-list-item"
          href="/en/showcase"
        >
          <span
            class="render-navbar-list-item-text "
          >
            Showcase
          </span>
        </a>
      </div>
      <div
        class="bulma-navbar-item pr-5 pl-0 py-0"
      >
        <a
          class="render-navbar-list-item"
          href="/en/articles"
        >
          <span
            class="render-navbar-list-item-text "
          >
            Tech Articles
          </span>
        </a>
      </div>
      <div
        class="bulma-navbar-item bulma-has-dropdown bulma-is-hoverable"
      >
        <a
          class="bulma-navbar-link is-transparent render-navbar-list-item-text "
        >
          My interests
        </a>
        <div
          class="bulma-navbar-dropdown bulma-is-boxed bulma-is-right"
        >
          <a
            class="bulma-navbar-item"
            href="/en/photography"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Photography
            </span>
          </a>
          <a
            class="bulma-navbar-item"
            href="/en/football"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Football
            </span>
          </a>
          <a
            class="bulma-navbar-item"
            href="/en/guitar"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Guitar
            </span>
          </a>
          <a
            class="bulma-navbar-item"
            href="/en/bicycle"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Bicycle
            </span>
          </a>
          <a
            class="bulma-navbar-item"
            href="/en/electronics"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Electronics
            </span>
          </a>
        </div>
      </div>
      <div
        class="bulma-navbar-item pr-5 pl-0 py-0"
      >
        <a
          class="render-navbar-list-item"
          href="/en/contact"
        >
          <span
            class="render-navbar-list-item-text "
          >
            Contact
          </span>
        </a>
      </div>
      <div
        class="bulma-navbar-item pr-5 pl-0 py-0"
      >
        <a
          class="render-navbar-list-item"
          href="/en/about"
        >
          <span
            class="render-navbar-list-item-text "
          >
            About
          </span>
        </a>
      </div>
      <div
        class="bulma-navbar-item pr-5 pl-0 py-0"
      >
        <a
          class="render-navbar-list-item"
          href="/en/account/signin"
        >
          <span
            class="render-navbar-list-item-text "
          >
            Sign in
          </span>
        </a>
      </div>
      <div
        class="bulma-navbar-item pr-5 pl-0 py-0"
      >
        <a
          class="render-navbar-list-item"
          href="/en/account/signup"
        >
          <span
            class="render-navbar-list-item-text "
          >
            Sign up
          </span>
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test render function 'RenderNavbarMenu' should return rendered list when items are provided and user is logged. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bulma-navbar is-flex is-flex-wrap-wrap"
      >
        <div
          class="bulma-navbar-item pr-5 pl-0 py-0"
        >
          <a
            class="render-navbar-list-item"
            href="/en/showcase"
          >
            <span
              class="render-navbar-list-item-text "
            >
              Showcase
            </span>
          </a>
        </div>
        <div
          class="bulma-navbar-item pr-5 pl-0 py-0"
        >
          <a
            class="render-navbar-list-item"
            href="/en/articles"
          >
            <span
              class="render-navbar-list-item-text "
            >
              Tech Articles
            </span>
          </a>
        </div>
        <div
          class="bulma-navbar-item bulma-has-dropdown bulma-is-hoverable"
        >
          <a
            class="bulma-navbar-link is-transparent render-navbar-list-item-text "
          >
            My interests
          </a>
          <div
            class="bulma-navbar-dropdown bulma-is-boxed bulma-is-right"
          >
            <a
              class="bulma-navbar-item"
              href="/en/photography"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Photography
              </span>
            </a>
            <a
              class="bulma-navbar-item"
              href="/en/football"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Football
              </span>
            </a>
            <a
              class="bulma-navbar-item"
              href="/en/guitar"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Guitar
              </span>
            </a>
            <a
              class="bulma-navbar-item"
              href="/en/bicycle"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Bicycle
              </span>
            </a>
            <a
              class="bulma-navbar-item"
              href="/en/electronics"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Electronics
              </span>
            </a>
          </div>
        </div>
        <div
          class="bulma-navbar-item pr-5 pl-0 py-0"
        >
          <a
            class="render-navbar-list-item"
            href="/en/contact"
          >
            <span
              class="render-navbar-list-item-text "
            >
              Contact
            </span>
          </a>
        </div>
        <div
          class="bulma-navbar-item pr-5 pl-0 py-0"
        >
          <a
            class="render-navbar-list-item"
            href="/en/about"
          >
            <span
              class="render-navbar-list-item-text "
            >
              About
            </span>
          </a>
        </div>
        <div
          class="bulma-navbar-item bulma-has-dropdown bulma-is-hoverable"
        >
          <a
            class="bulma-navbar-link is-transparent render-navbar-list-item-text "
          >
            Account
          </a>
          <div
            class="bulma-navbar-dropdown bulma-is-boxed bulma-is-right"
          >
            <a
              class="bulma-navbar-item link-disabled"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                User articles
              </span>
            </a>
            <a
              class="bulma-navbar-item link-disabled"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                User notes
              </span>
            </a>
            <a
              class="bulma-navbar-item link-disabled"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                User files
              </span>
            </a>
            <a
              class="bulma-navbar-item"
              href="/en/account"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                User settings
              </span>
            </a>
            <a
              class="bulma-navbar-item"
              href="/en/account/signout"
            >
              <div>
                <svg
                  class="is-flex is-align-self-center "
                  role="presentation"
                  style="width: 1.2rem; height: 1.2rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <span>
                Sign out
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bulma-navbar is-flex is-flex-wrap-wrap"
    >
      <div
        class="bulma-navbar-item pr-5 pl-0 py-0"
      >
        <a
          class="render-navbar-list-item"
          href="/en/showcase"
        >
          <span
            class="render-navbar-list-item-text "
          >
            Showcase
          </span>
        </a>
      </div>
      <div
        class="bulma-navbar-item pr-5 pl-0 py-0"
      >
        <a
          class="render-navbar-list-item"
          href="/en/articles"
        >
          <span
            class="render-navbar-list-item-text "
          >
            Tech Articles
          </span>
        </a>
      </div>
      <div
        class="bulma-navbar-item bulma-has-dropdown bulma-is-hoverable"
      >
        <a
          class="bulma-navbar-link is-transparent render-navbar-list-item-text "
        >
          My interests
        </a>
        <div
          class="bulma-navbar-dropdown bulma-is-boxed bulma-is-right"
        >
          <a
            class="bulma-navbar-item"
            href="/en/photography"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Photography
            </span>
          </a>
          <a
            class="bulma-navbar-item"
            href="/en/football"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Football
            </span>
          </a>
          <a
            class="bulma-navbar-item"
            href="/en/guitar"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Guitar
            </span>
          </a>
          <a
            class="bulma-navbar-item"
            href="/en/bicycle"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Bicycle
            </span>
          </a>
          <a
            class="bulma-navbar-item"
            href="/en/electronics"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Electronics
            </span>
          </a>
        </div>
      </div>
      <div
        class="bulma-navbar-item pr-5 pl-0 py-0"
      >
        <a
          class="render-navbar-list-item"
          href="/en/contact"
        >
          <span
            class="render-navbar-list-item-text "
          >
            Contact
          </span>
        </a>
      </div>
      <div
        class="bulma-navbar-item pr-5 pl-0 py-0"
      >
        <a
          class="render-navbar-list-item"
          href="/en/about"
        >
          <span
            class="render-navbar-list-item-text "
          >
            About
          </span>
        </a>
      </div>
      <div
        class="bulma-navbar-item bulma-has-dropdown bulma-is-hoverable"
      >
        <a
          class="bulma-navbar-link is-transparent render-navbar-list-item-text "
        >
          Account
        </a>
        <div
          class="bulma-navbar-dropdown bulma-is-boxed bulma-is-right"
        >
          <a
            class="bulma-navbar-item link-disabled"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              User articles
            </span>
          </a>
          <a
            class="bulma-navbar-item link-disabled"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              User notes
            </span>
          </a>
          <a
            class="bulma-navbar-item link-disabled"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              User files
            </span>
          </a>
          <a
            class="bulma-navbar-item"
            href="/en/account"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              User settings
            </span>
          </a>
          <a
            class="bulma-navbar-item"
            href="/en/account/signout"
          >
            <div>
              <svg
                class="is-flex is-align-self-center "
                role="presentation"
                style="width: 1.2rem; height: 1.2rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
                  style="fill: currentColor;"
                />
              </svg>
            </div>
            <span>
              Sign out
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
